--- a/applications/welcome/views/default/template.html
+++ b/applications/welcome/views/default/template.html
@@ -1,6 +1,4 @@
-<html>
-  <body>
-    <h1>{{=a}}</h1>
-    <h2>{{=b}}</h2>
-  </body>
-</html>
+{{extend 'layout.html'}}
+
+<h1>{{=a}}</h1>
+<h2>{{=b}}</h2>
