common_context and simpler template

--- a/applications/welcome/views/default/index.html
+++ b/applications/welcome/views/default/index.html
@@ -5,6 +5,8 @@
     <a href="/welcome/default/template">Template</a>
     <a href="/welcome/default/make_thing">Form example</a>
 
+    {{=DIV(SPAN(A('click me',_href='#')))}}
+    
     <table>
       <tr><td>application</td><td>{{=request.application}}</td></tr>
       <tr><td>controller</td><td>{{=request.controller}}</td></tr>
