--- a/applications/welcome/views/default/index.html
+++ b/applications/welcome/views/default/index.html
@@ -6,7 +6,7 @@
     <a href="/welcome/default/make_thing">Form example</a>
 
     {{=DIV(SPAN(A('click me',_href='#')))}}
-    
+    {{=T('welcome')}} translated
     <table>
       <tr><td>application</td><td>{{=request.application}}</td></tr>
       <tr><td>controller</td><td>{{=request.controller}}</td></tr>
