--- a/applications/welcome/views/default/user.html
+++ b/applications/welcome/views/default/user.html
@@ -1,20 +1,20 @@
 {{extend 'layout.html'}}
 
 <h2>
-{{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
+{{=T('Sign Up') if request.args and request.args[0] == 'register' else T('Log In') if request.args and request.args[0] == 'login' else T(request.args[0].replace('_',' ').title())}}
 </h2>
 
 <div class="container">
     <div class="row">
         <div id="web2py_user_form" class="col-lg-6">
         {{
-        if request.args(0)=='login':
-            if not 'register' in auth.settings.actions_disabled:
-                form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
-            pass
-            if not 'request_reset_password' in auth.settings.actions_disabled:
-                form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default')
-            pass
+        if request.args and request.args[0]=='login':
+            #if not 'register' in auth.settings.actions_disabled:
+            #    form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
+            #pass
+            #if not 'request_reset_password' in auth.settings.actions_disabled:
+            #    form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default')
+            #pass
         pass
         =form
         }}
@@ -26,9 +26,9 @@
 {{block page_js}}
 <script>
     jQuery("#web2py_user_form input:visible:enabled:first").focus();
-{{if request.args(0)=='register':}}
+{{if request.args and request.args[0]=='register':}}
     web2py_validate_entropy(jQuery('#auth_user_password'),100);
-{{elif request.args(0)=='change_password':}}
+{{elif request.args and request.args[0]=='change_password':}}
     web2py_validate_entropy(jQuery('#no_table_new_password'),100);
 {{pass}}
 </script>
