--- a/applications/todo/templates/layout.html
+++ b/applications/todo/templates/layout.html
@@ -6,13 +6,13 @@
   <body>
     <section class="section">
       <div class="container">
-        <h1 class="title">Sample TODO App</h1>
+        <h1 class="title">Example TODO App</h1>
       </div>
     </section>
     [[include]]
     <footer class="footer">
       <div class="content has-text-centered">
-        I was made with web3py (prototype, vue.js, and bulma.css)
+        I was made with web3py (prototype), vue.js, and bulma.css
       </div>
     </footer>
   </body>
