--- a/applications/todo/templates/index.html
+++ b/applications/todo/templates/index.html
@@ -19,7 +19,7 @@
     </div>          
     <div class="columns">
       <div class="column is-three-quarters">
-        <textarea style="padding:5px;width:100%;height:50px" v-model="input" placeholder="something todo?"></textarea>
+        <textarea class="textarea" v-model="input" placeholder="something todo?"></textarea>
       </div>
       <div class="column">
         <button class="button is-primary" v-on:click="save()">
