--- a/applications/_dashboard/static/css/future.css
+++ b/applications/_dashboard/static/css/future.css
@@ -7,7 +7,7 @@ html {
    background: black;
    color: #33BFFF;
    font-size: 14px;
-   font-family: 'Cousine', monospace, Courier;
+   font-family: helvetica;
 }
 p {
    margin-bottom: 10px;
@@ -15,12 +15,12 @@ p {
 .logo {
    padding: 10px;
    font-size: 80px;
+   position: absolute;
+   top: 0;
 }
 .spinner-top {
-   float: right;
    height: 80px;
-   padding-top: 10px;
-   margin-right: 80px;
+   padding: 10px;
 }
 .ace-pastel-on-dark {
     background-color: black !important;
@@ -33,6 +33,9 @@ iframe {
 table {
    width: 100%;
 }
+table thead tr {
+   background-color: rgba(48,180,255,0.5);
+}
 td, th { 
    text-align: left;
    vertical-align: top;
@@ -43,13 +46,18 @@ tbody {
 }
 button {
    background-color: black;
-   color: #33BFFF;
+   color: #33BFFF;   
    border: 2px solid #33BFFF;
-   height: 20px;
-   border-radius: 10px;
-   padding: 2px 20px;
+   border-radius: 5px;
+   padding: 2px 10px 4px 10px;
    margin-right:5px;
    margin-bottom:5px;
+   font-size: 14px;
+}
+button.btn-app {
+   width: 200px;
+   padding: 4px 20px 6px 10px;  
+   text-align: left;   
 }
 .my-effects a, .my-effects a:hover, .my-effects a:visited { color: #90b9b7; text-decoration:none }
 .my-effects a:not(.btn) {position:relative}
@@ -75,21 +83,16 @@ button {
    margin: 5px 15px 5px 5px;
    padding: 30px 5px 2px 5px;
    position: relative;
-   border: 1px solid #33BFFF;
-   border-top-left-radius: 5px;
    text-overflow: ellipsis;
 }
 #target .panel > label {
-   min-width: 40vw;
+   width: 98%;
    white-space: nowrap;
-   font-family: courier;
    font-size: 24px;
    font-weight: normal;
    background: #33BFFF;
    color: black;
-   padding: 2px;   
-   border-top-left-radius: 4px;
-   border-bottom-right-radius: 5px;
+   padding: 4px 10px;   
    opacity: 0.9;
    position: absolute;
    top: 0;
@@ -100,7 +103,6 @@ input[type=text] {
    border-bottom: 2px solid #33BFFF;
    font-size: 24px;
    color: #33BFFF;
-   font-family: 'Cousine', monospace, Courier;
 }
 input[type=text]:focus {
    border: 0;
@@ -116,8 +118,8 @@ label {
    max-width: 400px;
 }
 .my-effects .accordion>label{cursor:pointer}
-.my-effects .accordion>input ~ label:before {content:"- ";}
-.my-effects .accordion>input:checked ~ label:before {content:"+ ";}
+.my-effects .accordion>input ~ label:before {content:"+ ";}
+.my-effects .accordion>input:checked ~ label:before {content:"- ";}
 .my-effects .accordion>input {display:none}
 .my-effects .accordion>input:checked ~ *:not(label) {
   padding-top: 10px;
@@ -168,4 +170,26 @@ label {
   background-repeat: no-repeat;
   background-position: center center;
 }
+.right {
+  float:right
+}
+.fa.red {
+  background-color: transparent;
+  color: red;
+}
+.blink {
+  animation: blink 2s steps(5, start) infinite;
+  -webkit-animation: blink 1s steps(5, start) infinite;
+}
+@keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
+
 #editor {width:100%; height:100vh;}
