added URL helper

--- a/applications/todo/templates/layout.html
+++ b/applications/todo/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/[[=request.app_name]]/static/css/bulma.css">
+  <link rel="stylesheet" href="[[=URL('static/css/bulma.css')]]">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <body>
     <section class="section">
@@ -16,8 +16,8 @@
       </div>
     </footer>
   </body>
-  <script src="/[[=request.app_name]]/static/js/sugar.min.js"></script> 
-  <script src="/[[=request.app_name]]/static/js/axios.min.js"></script> 
-  <script src="/[[=request.app_name]]/static/js/vue.min.js"></script> 
-  <script src="/[[=request.app_name]]/static/js/todo.js"></script> 
+  <script src="[[=URL('static/js/sugar.min.js')]]"></script> 
+  <script src="[[=URL('static/js/axios.min.js')]]"></script> 
+  <script src="[[=URL('static/js/vue.min.js')]]"></script> 
+  <script src="[[=URL('static/js/todo.js')]]"></script> 
 </html>
