--- a/applications/examples/templates/dbform.html
+++ b/applications/examples/templates/dbform.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
   </head>
-  <body>
+  <body style="padding:5vh 10vw">
     <h2>Form</h2>
     [[=form]]
     <h2>Rows</h2>
