bettr _scaffolding app

--- a/applications/_scaffold/templates/layout.html
+++ b/applications/_scaffold/templates/layout.html
@@ -46,9 +46,10 @@
       </div>
     </footer>
   </body>
-  [[block scripts]]
+  [[block global_scripts]]
   <script src="[[=request.app_name]]/static/js/sugar.min.js"></script>
   <script src="[[=request.app_name]]/static/js/axios.min.js"></script>
   <script src="[[=request.app_name]]/static/js/vue.min.js"></script>
   [[end]]
+  [[block page_scripts]][[end]]
 </html>
