--- a/applications/_scaffold/templates/layout.html
+++ b/applications/_scaffold/templates/layout.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/[[=request.app_name]]/static/css/bulma.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/[[=request.app_name]]/static/css/bulma.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    [[block page_head]]<!-- individual page can customize head here -->[[end]]
+  </head>
   <body>    
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -16,11 +19,11 @@
           <span aria-hidden="true"></span>
         </a>
       </div>
-
       <div id="left-navbar" class="navbar-menu">
-        <div class="navbar-start">
+        <div class="navbar-start">          
           <a class="navbar-item">Home</a>
-          <a class="navbar-item">Documentation</a>
+          <a class="navbar-item">Documentation</a>          
+          [[block page_menu_items]]<!-- individual page can add menu items here -->[[end]]
         </div>
         <div class="navbar-end">
           <div class="navbar-item">
@@ -34,11 +37,13 @@
     </nav>
     <section class="section">
       <div class="container">
-        <h1 class="title">[[=request.app_name.upper()]]</h1>
+        <h1 class="title">[[=request.app_name.strip('_').title()]]</h1>
       </div>
     </section>
     <section class="section">
+      <!-- begin of HTML inserted by extending template -->
       [[include]]
+      <!-- end of HTML inserted by extending template -->
     </section>
     <footer class="footer">
       <div class="content has-text-centered">
@@ -46,10 +51,8 @@
       </div>
     </footer>
   </body>
-  [[block global_scripts]]
   <script src="[[=request.app_name]]/static/js/sugar.min.js"></script>
   <script src="[[=request.app_name]]/static/js/axios.min.js"></script>
   <script src="[[=request.app_name]]/static/js/vue.min.js"></script>
-  [[end]]
-  [[block page_scripts]][[end]]
+  [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
 </html>
