a first version of utils and mtable

--- a/applications/todo/templates/layout.html
+++ b/applications/todo/templates/layout.html
@@ -19,5 +19,6 @@
   <script src="[[=URL('static/js/sugar.min.js')]]"></script> 
   <script src="[[=URL('static/js/axios.min.js')]]"></script> 
   <script src="[[=URL('static/js/vue.min.js')]]"></script> 
+  <script src="[[=URL('static/js/utils.js')]]"></script> 
   <script src="[[=URL('static/js/todo.js')]]"></script> 
 </html>
