--- a/applications/_dashboard/static/components/mtable.html
+++ b/applications/_dashboard/static/components/mtable.html
@@ -2,7 +2,7 @@
   <table>
     <tr>
       <td>              
-        <input v-model="filter" type="text" placeholder="filter" style="width: 100%"/>
+        <input v-model="filter" type="text" placeholder="filter (example id > 1)" style="width: 100%"/>
       </td>
       <td style="white-space: nowrap; width:10%">
         <i class="fa fa-cross-circle"></i>
@@ -12,9 +12,9 @@
     </tr>
     <tr>
       <td></td>
-      <td v-if="!table.count">(no items found)</td>
-      <td v-else-if="table.count==1">(one item found)</td>
-      <td v-else>({{table.count}} items found)</td>
+      <td class="right" v-if="!table.count">(no items found)</td>
+      <td class="right" v-else-if="table.count==1">(one item found)</td>
+      <td class="right" v-else>({{table.count}} items found)</td>
     </tr>
   </table>        
   <div v-if="item!=null">
@@ -78,7 +78,7 @@
               <i class="fa fa-square" v-if="item[field.name]===false"></i>
             </span>
             <span v-else-if="field.type=='text'" class="field-text"><i class="fa fa-expand"></i></span>
-            <a v-else-if="field.type.split(' ')[0]=='reference'" class="field-reference">Ref.[{{item[field.name]}}]</a>
+            <a v-else-if="field.type=='reference'" class="field-reference">Ref.[{{item[field.references]}}]</a>
             <span v-else-if="field.type=='upload'" class="field-upload"><i class="fa fa-download"></i></span>
           </td>
           <td>
