--- a/applications/_dashboard/static/css/future.css
+++ b/applications/_dashboard/static/css/future.css
@@ -111,15 +111,16 @@ button:hover {
    position: relative;
    text-overflow: ellipsis;
 }
-#target .panel > label {
+.panel > label {
    width: 98%;
    white-space: nowrap;
    font-size: 24px;
    font-weight: normal;
-   background: #33BFFF;
+   border: 4px solid #33BFFF;
+   background-image: linear-gradient(135deg, #33BFFF 50%, #139FDF 50.5%);
    color: black;
-   padding: 4px 10px;   
-   opacity: 0.9;
+   padding: 0 6px;   
+   opacity: 1.0;
    position: absolute;
    top: 0;
    left: 0;
