auth login/register works but no good redirection

--- a/applications/_dashboard/templates/index.html
+++ b/applications/_dashboard/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <base href="[[=URL('static')]]/" target="_blank">
+    <base href="[[=URL('static')]]/">
     <link rel="stylesheet" type="text/css" href="css/future.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">    
   </head>
