--- a/applications/_scaffold/templates/layout.html
+++ b/applications/_scaffold/templates/layout.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="[[=URL('static')]]/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="[[=URL('static/css/bulma.css')]]">
+    <link rel="stylesheet" href="css/bulma.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     [[block page_head]]<!-- individual page can customize head here -->[[end]]
   </head>
@@ -28,8 +29,8 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a class="button is-primary">Sign up</a>
-              <a class="button is-light">Log in</a>
+              <a class="button is-primary" href="[[=URL('auth/register')]]">Sign up</a>
+              <a class="button is-light" href="[[=URL('auth/login')]]">Log in</a>
             </div>
           </div>
         </div>
@@ -51,8 +52,8 @@
       </div>
     </footer>
   </body>
-  <script src="[[=URL('static/js/sugar.min.js')]]"></script>
-  <script src="[[=URL('static/js/axios.min.js')]]"></script>
-  <script src="[[=URL('static/js/vue.min.js')]]"></script>
+  <script src="js/sugar.min.js"></script>
+  <script src="js/axios.min.js"></script>
+  <script src="js/vue.min.js"></script>
   [[block page_scripts]]<!-- individual pages can add scripts here -->[[end]]
 </html>
