--- a/apps/_dashboard/templates/dbadmin.html
+++ b/apps/_dashboard/templates/dbadmin.html
@@ -15,7 +15,7 @@
         </label>
       </div>      
       <div class="panel">
-        <mtable :url="url" :filter="filter" :order="order"></mtable>
+        <mtable :url="url" :filter="filter" :order="order" :editable="true" :render="{}"></mtable>
       </div>
     </div>
   </body>
