--- a/apps/_scaffold/templates/auth.html
+++ b/apps/_scaffold/templates/auth.html
@@ -1,9 +1,9 @@
 [[extend "layout.html"]]
 <div id="vue">
-  <auth action="[[=action]]"></auth>
+  <auth></auth>
 </div>
 [[block page_scripts]]
 <script src="js/utils.js"></script>
 <script src="components/auth.js"></script>
-<script src="js/auth_test.js"></script>
+<script>utils.app().start();</script>
 [[end]]
