--- a/apps/_dashboard/static/css/future.css
+++ b/apps/_dashboard/static/css/future.css
@@ -199,6 +199,37 @@ label {
   -o-transition: all 200ms cubic-bezier(0.42, 0, 0, 0.9);
   transition: all 200ms cubic-bezier(0.42, 0, 0, 0.9);
 }
+.login {
+  text-align: center;
+  background: rgba(0,0,0,0.1);
+  z-index: 110;
+  position: fixed;
+  top:0;
+  left:0;
+  right:0;
+  height: 100vh;
+  color: #33BFFF;
+}
+.login h1 {
+  font-size:6em;
+  margin:16vh 0 8vh 0
+} 
+.login h2 {
+  font-size:2em;
+  margin:8vh 0;
+}
+.login input[type=password] { 
+  text-align: center;
+  border-radius:10px;
+  border: 2px solid #33BFFF;
+  padding:10px 20px;
+  transition: all .5s ease;
+  width: 200px;
+} 
+.login input[type=password]:focus {
+  padding:10px 40px;
+  width: 240px;
+}
 .loading {
   z-index: 100;
   position: fixed;
@@ -234,3 +265,4 @@ label {
 }
 
 #editor {width:100%; height:100vh;}
+
